deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-application-onboarding
spec:
  selector:
    app: gen-application-onboarding
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
