deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gen-application-onboarding
spec:
  to:
    kind: Service
    name: gen-application-onboarding
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
